// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cutsom > custom component case 1 1`] = `
{
  "subtitle": {
    "base": {
      "css": "",
      "cssInJs": {},
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".ice-subtitle {
    padding-top: 1.25rem;
    padding-bottom: 1rem;
    font-size: 0.875rem;
    line-height: 1.25rem;
    --tw-text-opacity: 1;
    color: rgb(75 85 99 / var(--tw-text-opacity))
}",
      "cssInJs": {
        ".ice-subtitle": {
          "--tw-text-opacity": "1",
          "color": "rgb(75 85 99 / var(--tw-text-opacity))",
          "fontSize": "0.875rem",
          "lineHeight": "1.25rem",
          "paddingBottom": "1rem",
          "paddingTop": "1.25rem",
        },
      },
    },
  },
  "tips": {
    "base": {
      "css": "",
      "cssInJs": {},
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".som-tips {
    padding-top: 0.75rem;
    padding-bottom: 0.5rem;
    font-size: 0.75rem;
    line-height: 1rem;
    --tw-text-opacity: 1;
    color: rgb(107 114 128 / var(--tw-text-opacity))
}",
      "cssInJs": {
        ".som-tips": {
          "--tw-text-opacity": "1",
          "color": "rgb(107 114 128 / var(--tw-text-opacity))",
          "fontSize": "0.75rem",
          "lineHeight": "1rem",
          "paddingBottom": "0.5rem",
          "paddingTop": "0.75rem",
        },
      },
    },
  },
}
`;

exports[`cutsom > custom component case 2 1`] = `
{
  "checkbox": {
    "base": {
      "css": "@charset "UTF-8";
.ice-checkbox .wx-checkbox-input {
  width: 34rpx;
  height: 34rpx;
  border-radius: 50%;
}

/*checkbox选中后样式  */
.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
  background: #0394f0;
  border-color: #0394f0;
}

/*checkbox选中后图标样式  */
.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
  width: 20rpx;
  height: 20rpx;
  line-height: 20rpx;
  text-align: center;
  font-size: 22rpx;
  color: #fff;
  background: transparent;
  transform: translate(-50%, -50%) scale(1);
  -webkit-transform: translate(-50%, -50%) scale(1);
}",
      "cssInJs": {
        ".ice-checkbox .wx-checkbox-input": {
          "borderRadius": "50%",
          "height": "34rpx",
          "width": "34rpx",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked": {
          "background": "#0394f0",
          "borderColor": "#0394f0",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
          "WebkitTransform": "translate(-50%, -50%) scale(1)",
          "background": "transparent",
          "color": "#fff",
          "fontSize": "22rpx",
          "height": "20rpx",
          "lineHeight": "20rpx",
          "textAlign": "center",
          "transform": "translate(-50%, -50%) scale(1)",
          "width": "20rpx",
        },
        "@charset "UTF-8"": true,
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": "",
      "cssInJs": {},
    },
  },
}
`;

exports[`cutsom > custom component case 3 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: red
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
          "color": "red",
          "fontSize": "0.875rem",
          "lineHeight": "1.25rem",
        },
      },
    },
  },
}
`;

exports[`cutsom > custom component case 4 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
  font-size: 0.875rem;
  line-height: 1rem !important;
  color: red
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
          "color": "red",
          "fontSize": "0.875rem",
          "lineHeight": "1rem !important",
        },
      },
    },
  },
}
`;

exports[`cutsom > custom component case 5 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".xxx {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity)) !important;
  font-size: 0.875rem !important;
  line-height: 1rem !important;
  color: red !important
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1 !important",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
          "color": "red !important",
          "fontSize": "0.875rem !important",
          "lineHeight": "1rem !important",
        },
      },
    },
  },
}
`;
